# rusty_stm

./: .gitignore  Cargo.toml  build.rs  jlink.cfg  rust-toolchain.toml
.cargo/: Config.toml
src/: common.rs  ethernet-test.rs  lib.rs  main.rs  net.rs  rtic-demo-ethernet.rs  rtic-ethernet.rs  rtic-test.rs
