[package]
name = "rusty-stm32"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"

[[bin]]
name = "tcp-server"
path = "src/bin/tcp-server.rs"

[dependencies]
panic-halt="0.2.0"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1"
stm32h7xx-hal = {version = "0.14.0", features = ["stm32h750v","rt", "ethernet", "smoltcp"]}
systick-monotonic = "1.0.1"

[dependencies.smoltcp]
version = "0.8.0"
default-features = false
features = ["medium-ethernet", "proto-ipv4", "socket-raw", "medium-ip", "socket-tcp", "socket-udp"]

[profile.dev]
debug = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 'z'