[package]
name = "rusty-stm32"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"

[[bin]]
name = "tcp-server"
path = "src/bin/tcp-server.rs"

[dependencies]
cortex-m-semihosting = { version = "0.5.0", features = ["jlink-quirks"] }
stm32h7xx-hal = {version = "0.14.0", features = ["stm32h750v","rt", "ethernet", "smoltcp"]}

[dependencies.rtic]
git = "https://github.com/rtic-rs/rtic.git"
package = "rtic"
version = "2.0.0-alpha.2"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
git = "https://github.com/rtic-rs/rtic.git"
package = "rtic-monotonics"
version = "=1.0.0-alpha.2"
features = ["cortex-m-systick"]

[dependencies.smoltcp]
version = "0.8.0"
default-features = false
features = ["medium-ethernet", "proto-ipv4", "socket-raw", "medium-ip", "socket-tcp", "socket-udp"]

[profile.dev]
debug = true
opt-level = 'z'

[profile.dev.package."*"]
opt-level = 'z'