[package]
name = "rusty-stm32"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "tcp-server"
path = "src/bin/tcp-server.rs"

[build-dependencies]
git2 = "0.17.1"
chrono = "0.4.24"

[dev-dependencies]
cortex-m-semihosting = { version = "0.5.0", features = ["jlink-quirks"] }

[dependencies]
cortex-m-semihosting = { version = "0.5.0", features = ["jlink-quirks"] }
stm32h7xx-hal = {version = "0.14.0", features = ["stm32h750v","rt", "ethernet", "smoltcp"]}

[dependencies.rtic]
git = "https://github.com/rtic-rs/rtic.git"
package = "rtic"
version = "2.0.0-alpha.2"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
git = "https://github.com/rtic-rs/rtic.git"
package = "rtic-monotonics"
version = "=1.0.0-alpha.2"
features = ["cortex-m-systick"]

[dependencies.smoltcp]
version = "0.8.0"
default-features = false
features = ["proto-ipv4", "socket-raw", "socket-tcp", "socket-udp", "async"]

[profile.dev]
debug = true
opt-level = 'z'

[profile.dev.package."*"]
opt-level = 'z'